--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: classified_app
+name: flutter_firebase
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
@@ -16,13 +16,12 @@ dependencies:
   flutter:
     sdk: flutter
 
+  firebase_auth:
+  cloud_firestore:
+
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  http: "^0.11.3+16"
-
-  firebase_database: ^0.4.6
-  firebase_core: any
 
 dev_dependencies:
   flutter_test:
